# libmongoose

./: .cproject  .gitignore  .project  Makefile.am  README.md  configure.ac  mongoose.c
mongoose.xcodeproj/: project.pbxproj
mongoose.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mongoose.xcodeproj/project.xcworkspace/xcuserdata/luz.xcuserdatad/: UserInterfaceState.xcuserstate
mongoose.xcodeproj/xcuserdata/luz.xcuserdatad/xcschemes/: mongoose.xcscheme  xcschememanagement.plist
